--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,5 +11,6 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Remotes: 
+    JiaW6122/PSAA
     changwn/scFEA
     ptdang1001/scFEA
